docs/paper-trades/v5/2026-04-29_report.md
# v5 Paper Trading Report -- 2026-04-29

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | BEAR |
| **Net P&L** | **Rs 18,044 (+1.80%)** |
| Trades | 71 (L:43 S:28) |
| Win Rate | 79% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | SHORT | INTRADAY | TORNTPHARM | 4182.90 | 4211.90 | Rs -145 | STOPLOSS |
| 2 | SHORT | INTRADAY | PHOENIXLTD | 1761.90 | 1771.80 | Rs -99 | STOPLOSS |
| 3 | SHORT | INTRADAY | SHRIRAMFIN | 953.25 | 959.30 | Rs -91 | STOPLOSS |
| 4 | SHORT | INTRADAY | SUPREMEIND | 3631.90 | 3707.00 | Rs -225 | STOPLOSS |
| 5 | SHORT | INTRADAY | BAJAJ-AUTO | 9495.50 | 9579.50 | Rs -84 | STOPLOSS |
| 6 | SHORT | INTRADAY | INDUSINDBK | 885.55 | 897.80 | Rs -135 | STOPLOSS |
| 7 | SHORT | INTRADAY | HINDUNILVR | 2289.50 | 2311.20 | Rs -130 | STOPLOSS |
| 8 | SHORT | INTRADAY | TATACONSUM | 1147.70 | 1156.50 | Rs -97 | STOPLOSS |
| 9 | SHORT | INTRADAY | CHOLAFIN | 1536.40 | 1545.80 | Rs -122 | STOPLOSS |
| 10 | SHORT | INTRADAY | ASHOKLEY | 167.52 | 168.74 | Rs -121 | STOPLOSS |
| 11 | SHORT | INTRADAY | AUBANK | 1022.80 | 1029.05 | Rs -62 | STOPLOSS |
| 12 | SHORT | INTRADAY | SWIGGY | 282.30 | 274.90 | Rs +518 | TARGET |
| 13 | SHORT | INTRADAY | BLUESTARCO | 1891.60 | 1850.30 | Rs +413 | TARGET |
| 14 | SHORT | INTRADAY | SWIGGY | 282.30 | 274.05 | Rs +544 | TARGET |
| 15 | SHORT | INTRADAY | SWIGGY | 282.30 | 273.40 | Rs +623 | TARGET |
| 16 | SHORT | INTRADAY | SWIGGY | 282.30 | 273.00 | Rs +651 | TARGET |
| 17 | SHORT | INTRADAY | ABB | 7288.00 | 7331.50 | Rs -87 | STOPLOSS |
| 18 | SHORT | INTRADAY | WIPRO | 201.58 | 201.42 | Rs +15 | FLAT_FORCE_EXIT |
| 19 | SHORT | INTRADAY | INDIGO | 4442.40 | 4348.00 | Rs +378 | TARGET |
| 20 | SHORT | INTRADAY | UNIONBANK | 170.48 | 166.89 | Rs +348 | TARGET |
| 21 | SHORT | INTRADAY | FEDERALBNK | 290.60 | 288.90 | Rs +85 | STOPLOSS |
| 22 | SHORT | INTRADAY | INDIGO | 4442.40 | 4346.40 | Rs +192 | TARGET |
| 23 | SHORT | INTRADAY | SBICARD | 647.45 | 651.35 | Rs -101 | STOPLOSS |
| 24 | SHORT | INTRADAY | MOTHERSON | 125.22 | 123.31 | Rs +319 | TIME_EXIT |
| 25 | SHORT | INTRADAY | UNITDSPR | 1374.40 | 1363.60 | Rs +140 | TIME_EXIT |
| 26 | SHORT | INTRADAY | ABB | 7288.00 | 7266.50 | Rs +43 | TIME_EXIT |
| 27 | SHORT | INTRADAY | WIPRO | 201.58 | 200.52 | Rs +83 | TIME_EXIT |
| 28 | SHORT | INTRADAY | TATACAP | 325.80 | 324.90 | Rs +37 | TIME_EXIT |
| 29 | LONG | SWING | TIINDIA | 3001.00 | 3063.00 | Rs +248 | TARGET |
| 30 | LONG | SWING | POLYCAB | 8254.00 | 8245.50 | Rs -8 | SIGNAL_FLIP |
| 31 | LONG | SWING | ADANIENT | 2412.40 | 2426.80 | Rs +72 | SIGNAL_FLIP |
| 32 | LONG | SWING | NMDC | 90.90 | 90.73 | Rs -22 | SIGNAL_FLIP |
| 33 | LONG | SWING | BHARTIARTL | 1843.80 | 1885.50 | Rs +334 | TARGET |
| 34 | LONG | SWING | RELIANCE | 1388.90 | 1417.20 | Rs +283 | TARGET |
| 35 | LONG | SWING | IDEA | 9.95 | 10.48 | Rs +188 | TARGET |
| 36 | LONG | SWING | INDUSTOWER | 413.95 | 421.45 | Rs +60 | TARGET |
| 37 | LONG | SWING | ONGC | 301.30 | 304.55 | Rs +188 | SIGNAL_FLIP |
| 38 | LONG | SWING | COALINDIA | 467.00 | 484.15 | Rs +635 | TARGET |
| 39 | LONG | SWING | IDEA | 9.95 | 10.30 | Rs +567 | TARGET |
| 40 | LONG | SWING | RELIANCE | 1388.90 | 1421.40 | Rs +325 | TARGET |
| 41 | LONG | SWING | OFSS | 9570.00 | 9786.00 | Rs +216 | TARGET |
| 42 | LONG | SWING | LODHA | 882.90 | 903.35 | Rs +286 | TARGET |
| 43 | LONG | SWING | MCX | 2898.00 | 2960.00 | Rs +62 | TARGET |
| 44 | LONG | SWING | COALINDIA | 467.00 | 482.10 | Rs +528 | TARGET |
| 45 | LONG | SWING | EXIDEIND | 356.25 | 365.50 | Rs +388 | TARGET |
| 46 | LONG | SWING | IDEA | 9.95 | 10.39 | Rs +625 | TARGET |
| 47 | LONG | SWING | RELIANCE | 1388.90 | 1422.50 | Rs +302 | TARGET |
| 48 | LONG | SWING | IDEA | 9.95 | 10.37 | Rs +656 | TARGET |
| 49 | LONG | SWING | COALINDIA | 467.00 | 482.00 | Rs +450 | TARGET |
| 50 | LONG | SWING | SUNPHARMA | 1733.50 | 1751.30 | Rs +160 | STOPLOSS |
| 51 | LONG | SWING | MCX | 2898.00 | 2955.50 | Rs +345 | STOPLOSS |
| 52 | LONG | SWING | MCX | 2898.00 | 2955.50 | Rs +288 | STOPLOSS |
| 53 | LONG | SWING | COALINDIA | 467.00 | 482.85 | Rs +523 | TARGET |
| 54 | LONG | SWING | IDEA | 9.95 | 10.35 | Rs +585 | TARGET |
| 55 | LONG | SWING | COALINDIA | 467.00 | 483.80 | Rs +588 | TARGET |
| 56 | LONG | SWING | IDEA | 9.95 | 10.37 | Rs +639 | TARGET |
| 57 | LONG | SWING | LICHSGFIN | 550.00 | 565.20 | Rs +380 | TARGET |
| 58 | LONG | SWING | EXIDEIND | 356.25 | 368.90 | Rs +455 | TARGET |
| 59 | LONG | SWING | LODHA | 882.90 | 918.25 | Rs +460 | TARGET |
| 60 | LONG | SWING | RADICO | 3399.20 | 3401.30 | Rs +6 | SIGNAL_FLIP |
| 61 | LONG | SWING | IDEA | 9.95 | 10.35 | Rs +696 | TARGET |
| 62 | LONG | SWING | COALINDIA | 467.00 | 483.40 | Rs +558 | TARGET |
| 63 | LONG | SWING | EXIDEIND | 356.25 | 368.95 | Rs +521 | TARGET |
| 64 | LONG | SWING | LICHSGFIN | 550.00 | 565.00 | Rs +360 | TARGET |
| 65 | LONG | SWING | LODHA | 882.90 | 920.00 | Rs +445 | TARGET |
| 66 | LONG | SWING | IDEA | 9.95 | 10.31 | Rs +577 | TARGET |
| 67 | LONG | SWING | COALINDIA | 467.00 | 481.85 | Rs +460 | TARGET |
| 68 | LONG | SWING | WAAREEENER | 3453.60 | 3485.30 | Rs +95 | STOPLOSS |
| 69 | LONG | SWING | NESTLEIND | 1440.00 | 1469.70 | Rs +238 | TARGET |
| 70 | LONG | SWING | DMART | 4544.40 | 4603.70 | Rs +119 | SIGNAL_FLIP |
| 71 | LONG | SWING | LICHSGFIN | 550.00 | 563.00 | Rs +273 | SIGNAL_FLIP |