docs/paper-trades/v6/2026-04-29_report.md
# v5 Paper Trading Report -- 2026-04-29

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | BEAR |
| **Net P&L** | **Rs 4,833 (+0.48%)** |
| Trades | 46 (L:11 S:35) |
| Win Rate | 72% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | SHORT | INTRADAY | BAJAJ-AUTO | 9495.50 | 9694.00 | Rs -198 | STOPLOSS |
| 2 | SHORT | INTRADAY | TORNTPHARM | 4182.90 | 4268.80 | Rs -344 | STOPLOSS |
| 3 | SHORT | INTRADAY | BLUESTARCO | 1891.60 | 1861.20 | Rs +243 | TARGET |
| 4 | SHORT | INTRADAY | SWIGGY | 282.30 | 273.55 | Rs +376 | TARGET |
| 5 | SHORT | INTRADAY | PHOENIXLTD | 1761.90 | 1816.60 | Rs -438 | STOPLOSS |
| 6 | SHORT | INTRADAY | SWIGGY | 282.30 | 275.05 | Rs +304 | TARGET |
| 7 | SHORT | INTRADAY | SWIGGY | 282.30 | 274.50 | Rs +343 | TARGET |
| 8 | SHORT | INTRADAY | TATACONSUM | 1147.70 | 1167.50 | Rs -198 | STOPLOSS |
| 9 | SHORT | INTRADAY | HINDUNILVR | 2289.50 | 2335.60 | Rs -230 | STOPLOSS |
| 10 | SHORT | INTRADAY | SWIGGY | 282.30 | 274.10 | Rs +410 | TARGET |
| 11 | SHORT | INTRADAY | SWIGGY | 282.30 | 272.90 | Rs +470 | TARGET |
| 12 | SHORT | INTRADAY | CHOLAFIN | 1536.40 | 1568.00 | Rs -348 | STOPLOSS |
| 13 | SHORT | INTRADAY | ASIANPAINT | 2462.60 | 2468.40 | Rs -52 | FLAT_FORCE_EXIT |
| 14 | SHORT | INTRADAY | ABB | 7288.00 | 7277.00 | Rs +11 | FLAT_FORCE_EXIT |
| 15 | SHORT | INTRADAY | INDIGO | 4442.40 | 4358.00 | Rs +169 | TARGET |
| 16 | SHORT | INTRADAY | WIPRO | 201.58 | 201.34 | Rs +19 | FLAT_FORCE_EXIT |
| 17 | SHORT | INTRADAY | SBICARD | 647.45 | 646.20 | Rs +28 | FLAT_FORCE_EXIT |
| 18 | SHORT | INTRADAY | UNIONBANK | 170.48 | 166.85 | Rs +327 | TARGET |
| 19 | SHORT | INTRADAY | UNIONBANK | 170.48 | 166.79 | Rs +181 | TARGET |
| 20 | SHORT | INTRADAY | INDIGO | 4442.40 | 4346.50 | Rs +192 | TARGET |
| 21 | SHORT | INTRADAY | INDIGO | 4442.40 | 4346.50 | Rs +96 | TARGET |
| 22 | SHORT | INTRADAY | MOTHERSON | 125.22 | 123.31 | Rs +262 | TARGET |
| 23 | SHORT | INTRADAY | HDFCBANK | 782.55 | 778.10 | Rs +116 | TIME_EXIT |
| 24 | SHORT | INTRADAY | ASHOKLEY | 167.52 | 165.79 | Rs +149 | TIME_EXIT |
| 25 | SHORT | INTRADAY | SHRIRAMFIN | 953.25 | 956.70 | Rs -45 | TIME_EXIT |
| 26 | SHORT | INTRADAY | SUPREMEIND | 3631.90 | 3665.80 | Rs -68 | TIME_EXIT |
| 27 | SHORT | INTRADAY | UNITDSPR | 1374.40 | 1363.60 | Rs +97 | TIME_EXIT |
| 28 | SHORT | INTRADAY | AUBANK | 1022.80 | 1018.50 | Rs +64 | TIME_EXIT |
| 29 | SHORT | INTRADAY | ZYDUSLIFE | 911.30 | 910.95 | Rs +5 | TIME_EXIT |
| 30 | SHORT | INTRADAY | ABB | 7288.00 | 7266.50 | Rs +22 | TIME_EXIT |
| 31 | SHORT | INTRADAY | SBIN | 1091.30 | 1085.60 | Rs +63 | TIME_EXIT |
| 32 | SHORT | INTRADAY | BANKINDIA | 144.25 | 143.15 | Rs +89 | TIME_EXIT |
| 33 | SHORT | INTRADAY | WIPRO | 201.58 | 200.52 | Rs +57 | TIME_EXIT |
| 34 | SHORT | INTRADAY | FEDERALBNK | 290.60 | 285.65 | Rs +168 | TIME_EXIT |
| 35 | SHORT | INTRADAY | TATACAP | 325.80 | 324.90 | Rs +25 | TIME_EXIT |
| 36 | LONG | SWING | POLYCAB | 8254.00 | 8239.00 | Rs -30 | SIGNAL_FLIP |
| 37 | LONG | SWING | TIINDIA | 3001.00 | 3045.80 | Rs +179 | SIGNAL_FLIP |
| 38 | LONG | SWING | NMDC | 90.90 | 90.87 | Rs -4 | SIGNAL_FLIP |
| 39 | LONG | SWING | BHARTIARTL | 1843.80 | 1886.80 | Rs +344 | TARGET |
| 40 | LONG | SWING | RELIANCE | 1388.90 | 1424.20 | Rs +353 | TARGET |
| 41 | LONG | SWING | ADANIPOWER | 223.35 | 223.24 | Rs -6 | SIGNAL_FLIP |
| 42 | LONG | SWING | ONGC | 301.30 | 304.65 | Rs +208 | STOPLOSS |
| 43 | LONG | SWING | ADANIENT | 2412.40 | 2406.10 | Rs -32 | STOPLOSS |
| 44 | LONG | SWING | COALINDIA | 467.00 | 481.25 | Rs +527 | TARGET |
| 45 | LONG | SWING | IDEA | 9.95 | 10.30 | Rs +569 | TARGET |
| 46 | LONG | SWING | MCX | 2898.00 | 2957.80 | Rs +359 | STOPLOSS |